--- a/TODO
+++ b/TODO
@@ -4,5 +4,6 @@ youtube-audio-react:
   ✘ use redux to determine what is rendered in the main body, etc, search, channel(videos or playlists) @cancelled(18-08-29 14:19)
   ✔ remove all eslint-disable @done(18-08-29 14:19)
   ✔ add readme to root and backend then edit client readme @done(18-08-29 14:20)
+  ☐ there should be three break points, >992px - large, >768px - medium and >600px <768px - small. refine these
   ☐ use es6 wherever possible
   ☐ fix this:Uncaught (in promise) DOMException: The play() request was interrupted by a new load request. It happens when you skip a track while the current is still loading
