--- a/TODO
+++ b/TODO
@@ -8,11 +8,13 @@ youtube-audio-react:
   ✔ fix the "Country Trending Videos" div and hr so they start wherever the first video starts and ends where the last video ends @done(18-09-03 21:29)
   ✔ add logic to update player controls so they synced with the audio @done(18-09-10 01:03)
   ✔ add seeking to player @done(18-09-10 01:19)
-  ☐ HPE_INVALID_CONSTANT when proxying from express backend. It is sending http and not https from express backend
-    A fix was implemented using heroku-ssl-redirect but has not been verified
-  ☐ separate react frontend and backend so they have to be started separately
-  ☐ add classname to everything
-  ☐ use es6 wherever possible
+  ✘ separate react frontend and backend so they have to be started separately @cancelled(18-09-15 13:05)
+  ✔ add classname to everything @done(18-09-15 13:37)
+  ☐ implement a better logic for switching play pause button
+  ☐ disable highlighting on seekbar
+  ☐ fix error where user seeks a lot on a section that isn't buffered and results in some type of infinite loop. Causes the web page to slow down drastically until refresh
   ☐ fix this:Uncaught (in promise) DOMException: The play() request was interrupted by a new load request. It happens when you skip a track while the current is still loading
   ☐ Home component should get country trending videos by IP and set that country name in this component
   ☐ use same method used in Results component to get seemingly higher resolution images on main page
+  ☐ HPE_INVALID_CONSTANT causes ERR_CONTENT_LENGTH_MISMATCHED or vice versa.
+    A fix was implemented using heroku-ssl-redirect but has not been verified
