--- a/TODO
+++ b/TODO
@@ -16,6 +16,7 @@ youtube-audio-react:
   ✔ fix crashing when skipping to previous songs @done(18-09-25 09:41)
   ✔ figure out how to play a song when a link is clicked and there is only one item in the queue @done(18-09-25 10:57)
   ✔ disable highlighting on seekbar @done(18-09-25 10:58)
+  ☐ disable step-backward and/or step-forward until the user has songs in the queue to do each action
   ☐ should the ability to play be separate from from the home and results component?
     for example to play a single song instead of adding it to the queue
   ☐ conditional context menu only for videos and playlists and NOT for channels
