--- a/TODO
+++ b/TODO
@@ -21,6 +21,7 @@ youtube-audio-react:
     for example to play a single song instead of adding it to the queue
     on spotify, they just add everything to the 'queue' whether it be search, playlists, or radio; you are unable to play a single song
     for now I will just avoid adding everything to the queue just to give it a youtube feel
+  ☐ Refractor to use css grid and/or css flex instead of bootstrap
   ☐ conditional context menu only for videos and playlists and NOT for channels
   ☐ implement a hover effect for 'show more' for each 'playable item' on website
     show more should just pop up the right click context menu
