--- a/TODO
+++ b/TODO
@@ -32,7 +32,7 @@ youtube-audio-react:
     ☐ Fix this:Uncaught (in promise) DOMException: The play() request was interrupted by a new load request.
       It happens when you skip a track while the current is still loading
     ☐ HPE_INVALID_CONSTANT causes ERR_CONTENT_LENGTH_MISMATCHED or vice versa.
-    ☐ Duplicate requests made when searching
+    ✔ Duplicate requests made when searching @done(19-05-16 13:19)
 
   Enhancements:
     ☐ Everything that gets plays has to go through the queue first
@@ -53,6 +53,7 @@ youtube-audio-react:
     ✔ Fix all eslint errors @done(19-05-15 23:58)
     ☐ Check to ensure all the propTypes hold
     ☐ Add error handling to all promises on client and server
+    ☐ Look into the impack of using async await on performance
     ✔ Remove console.logs @done(19-05-16 00:35)
     ☐ Update README's
     ✔ Update redux to the new API or use React's official state management @done(19-05-16 00:35)
